<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="Transfo_MV" Id="{3ad254a6-f19c-4297-847d-a8be0bf8906c}">
    <Declaration><![CDATA[TYPE Transfo_MV :
STRUCT
	
	MesData						: Transfo ; (* MesData *)


END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>